force-app/main/default/objects/Process_Scheduling__c/Process_Scheduling__c.object-meta.xml
<CustomObject>
    <label>Process Scheduling</label>
    <nameField>
        <label>Process Scheduling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Scheduling</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>