force-app/main/default/objects/Process_Scheduling__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to execute flow</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>