force-app/main/default/objects/Process_Scheduling__c/fields/Fire_Flow__c.field-meta.xml
<CustomField>
    <fullName>Fire_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked flow will be executed</inlineHelpText>
    <label>Fire Flow</label>
    <type>Checkbox</type>
</CustomField>