force-app/main/default/objects/Process_Scheduling__c/fields/Next_Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Scheduled_Date_Time__c</fullName>
    <inlineHelpText>Next time job will be run</inlineHelpText>
    <label>Next Scheduled Date/Time</label>
    <type>DateTime</type>
</CustomField>