force-app/main/default/objects/Process_Scheduling__c/fields/Number_of_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Minutes__c</fullName>
    <defaultValue>1440</defaultValue>
    <description>Number of minutes between runs - 1 day = 1440</description>
    <label>Number of Minutes</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>