force-app/main/default/objects/Process_Scheduling__c/fields/Percent_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Day__c</fullName>
    <formula>Number_of_Minutes__c / 1440</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent of Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>