force-app/main/default/objects/Process_Scheduling__c/fields/Run_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Run_Date_Time__c</fullName>
    <label>Run Date / Time</label>
    <type>DateTime</type>
</CustomField>