force-app/main/default/objects/Process_Scheduling__c/fields/Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Date_Time__c</fullName>
    <description>Last time job was run</description>
    <inlineHelpText>Last time job was run</inlineHelpText>
    <label>Scheduled Date/Time</label>
    <type>DateTime</type>
</CustomField>