force-app/main/default/objects/Process_Scheduling__c/validationRules/Greater_than_a_Day.validationRule-meta.xml
<ValidationRule>
    <fullName>Greater_than_a_Day</fullName>
    <active>true</active>
    <description>Minutes greater than 1440</description>
    <errorConditionFormula>Number_of_Minutes__c &gt; 1440</errorConditionFormula>
    <errorDisplayField>Number_of_Minutes__c</errorDisplayField>
    <errorMessage>Number of minutes between events must be less than 1440</errorMessage>
</ValidationRule>